# clinvar_vcf

./: .gitignore  LICENSE  README.md  clinvar_old_format_vcf_parser.py  clinvar_vcf_parser.py  match_alleleid.py  setup.cfg  setup.py  tox.ini
src/clinvar_vcf/: clinvar_vcf_parser.py
tests/: test_clinvar_vcf_parser.py
tests/resources/: ClinVarFullRelease_2021-03_1_record.xml  clinvar_20170404_10_records.vcf  clinvar_20170404_13_records.vcf  clinvar_20210302_10_records.vcf  clinvar_20210302_1_record.vcf  clinvar_20210302_1_record_annotated.vcf
