[metadata]
name = clinvar_vcf
version = file: VERSION
description = Parse ClinVar vcf and append extra information from the ClinVar XML
long_description = file: README.md
author = Olga Kondrashova
author_email = olga.kondrashova@qimrberghofer.edu.au
license = MIT License
classifiers:
    Programming Language :: Python :: 3.6
    License :: MIT License

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

